--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
